# tasty-agent

./: .dockerignore  .gitignore  .python-version  ACCOUNT_SELECTION_FIX.md  DISCORD_ACCOUNT_FIX.md  DOCKER.md  DUPLICATE_CODE_ANALYSIS.md  Dockerfile  GET_SPY_TRADES.md  LICENSE  MULTI_TENANT.md  README.md  RESTART_FOR_HAIKU.md  SPEED_OPTIMIZATION.md  STREAMING_IMPROVEMENTS.md  TOKEN_MANAGEMENT.md  TROUBLESHOOTING.md  UPDATE_ENV_MODEL.md  agent.py  api_front_review.ts  background.py  chat.py  credentials.json  curl_REST_instruction.md  docker-compose.yml  facebook_post.txt  get_spy_trades_api.py  get_spy_trades_direct.py  get_spy_trades_today.py  get_spy_trades_token.py  get_today_trades.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_mcp_stdio.py  test_account_id.sh  test_api.sh  test_haiku.sh  test_multi_tenant.sh  (+2 more)
.cursor/plans/: gammabox_proving_grounds_-_$2k_challenge_4867568f.plan.md
.github/workflows/: publish.yml
Logs/: .gitkeep
docs/: API_ERROR_HANDLING.md  CREDENTIALS_MANAGEMENT.md  CURRENT_ERRORS_ANALYSIS.md  ERROR_SUMMARY.md  FIXES_APPLIED.md  FIX_IP_MISMATCH_AND_404.md  IP_EXTRACTION_EXPLANATION.md  OPTION_CONTRACT_COST_CALCULATION.md  PAPER_TRADING_VALIDATION.md  SAFE_TESTING_GUIDE.md  STOP_LOSS_FIX.md  TEST_LIVE_API.md
scripts/: find_device_by_api_key.py  test_api.sh  test_api_error.sh  test_haiku.sh  test_multi_tenant.sh  update_device_ip.sql  validate_paper_trading.py
tasty_agent/: __init__.py  core_rules.md  database.py  day_trader.md  http_server.py  instruction_live_prompt.md  logging_config.py  position_tracker.py  scalpe_trader.md  server.py  supabase_client.py  swing_trader.md
tasty_agent/market_analysis/: bearish.md  bullish.md  core_rules.md
tasty_agent/utils/: __init__.py  credentials.py  errors.py  session.py  technical_analysis.py  thetadata_client.py
tests/: test_env.py  test_server.py
